fix: faders should not overlap buttons

--- a/client/assets/css/Channel.css
+++ b/client/assets/css/Channel.css
@@ -28,7 +28,7 @@
     -moz-outline : none;
     margin-left: 3px;
     margin-right: 3px;
-    margin-top: 25px;
+    margin-top: 37px;
     color: white;
     height: 90px;
     width: 80px;
@@ -171,9 +171,9 @@
 
 .channel-volume-fader {
     width: 10px;
-    height: 420px;
+    height: 400px;
     margin-left: 55px;
-    margin-top: 20px;
+    margin-top: 30px;
     background-color: rgb(15, 15, 15);
     border-color: rgba(0,0,0);
 
